--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
     "webpack-stream": "^3.1.0"
   },
   "dependencies": {
-    "@reactivex/rxjs": "^5.0.0-beta.4",
     "babel-polyfill": "^6.7.4",
     "immutable": "^3.7.6",
     "inversify": "^2.0.0-beta.1",
     "jquery": "^2.2.2",
     "knockout": "^3.4.0",
-    "reflect-metadata": "^0.1.3"
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "^5.0.0-beta.6"
   }
 }
