--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "isolatedModules": true,
-    "skipDefaultLibCheck": true
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules"
